--- a/client_side/index.html
+++ b/client_side/index.html
@@ -19,14 +19,14 @@
   <script src="app.js"></script>
   <script src="js/angular-materialize.js"></script>
 </head>
-<body class="">
+<body class="container orange lighten-5">
   <!-- top nav bar -->
   <div class="row">
     <nav>
       <div class="nav-wrapper lime darken-4">
         <a class="brand-logo animated fadeInRight center-align">Kush Taxi</a>
         <ul class="right hide-on-med-and-down">
-          <li class="links"><a data-activates="slide-out" class="button-collapse show-on-large element-animation" id="car" ><i class="fa fa-taxi "></i></a></li>
+          <li class="links"><span class="left">Menu</span><a data-activates="slide-out" class="button-collapse show-on-large element-animation" id="car" ><i class="fa fa-taxi "></i></a></li>
           <li class="links"><a class="waves-effect waves-light ">Join</a></li>
           <li class="links"><a class="waves-effect waves-light ">Patient Login</a></li>
         </ul>
@@ -34,60 +34,61 @@
     </nav>
   </div>
   <!-- Page Layout here -->
-  <div class="container z-depth-5">
-    <form class="">
-      <div class="row">
-        <div class="input-field col s6">
-          <input  id="first_name" type="text" class="validate">
-          <label for="first_name">First Name</label>
+  <div class="row orange lighten-5 z-depth-5">
+    <div class="container">
+      <form class="">
+        <div class="row">
+          <div class="input-field col s6">
+            <input  id="first_name" type="text" class="validate">
+            <label for="first_name">First Name</label>
+          </div>
+          <div class="input-field col s6">
+            <input id="last_name" type="text" class="validate">
+            <label for="last_name">Last Name</label>
+          </div>
         </div>
-        <div class="input-field col s6">
-          <input id="last_name" type="text" class="validate">
-          <label for="last_name">Last Name</label>
+        <div class="row">
+          <div class="input-field col s6">
+            <input id="email" type="email" class="validate">
+            <label for="email">Email</label>
+          </div>
+          <div class="input-field col s6">
+            <input id="password" type="password" class="validate">
+            <label for="password">Password</label>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s6">
-          <input id="email" type="email" class="validate">
-          <label for="email">Email</label>
-        </div>
-        <div class="input-field col s6">
-          <input id="password" type="password" class="validate">
-          <label for="password">Password</label>
-        </div>
-      </div>
-      <div class="file-field input-field">
-        <div class="btn lime darken-4">
-          <span>File</span>
-          <input type="file" multiple>
-        </div>
-        <div class="file-path-wrapper">
-          <input class="file-path validate" type="text" placeholder="Upload one or more files">
-        </div>
-      </div>
-    </div>
-  </form>
+        <div class="row">
 
+        <div class="file-field input-field col s6">
+          <div class="btn-floating lime darken-4 left">
+            <i class="fa fa-file-image-o"></i>
+            <input type="file"/>
+          </div>
+          <div class="file-path-wrapper col s6">
+            <input class="file-path validate"  id="photo" type="text" placeholder="Upload Photo ID">
+          </div>
+        </div>
+        <div class="file-field input-field col s6">
+          <div class="btn-floating lime darken-4 left">
+            <i class="fa fa-file-o"></i>
+            <input type="file"/>
+          </div>
+          <div class="file-path-wrapper col s6">
+            <input class="file-path validate"  id="rec" type="text" placeholder="Upload Recommendation">
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
 </div>
+<!-- Pop Out Side Menu -->
 <div class="row">
   <ul id="slide-out" class="side-nav">
-    <li><a href="#!">First Sidebar Link</a></li>
-    <li><a href="#!">Second Sidebar Link</a></li>
-    <li class="no-padding">
-      <ul class="collapsible collapsible-accordion">
-        <li>
-          <a class="collapsible-header">Dropdown<i class="mdi-navigation-arrow-drop-down"></i></a>
-          <div class="collapsible-body">
-            <ul>
-              <li><a href="#!">First</a></li>
-              <li><a href="#!">Second</a></li>
-              <li><a href="#!">Third</a></li>
-              <li><a href="#!">Fourth</a></li>
-            </ul>
-          </div>
-        </li>
-      </ul>
-    </li>
+    <li><a href="#!">Flowers</a></li>
+    <li><a href="#!">Concentrates</a></li>
+    <li><a href="#!">Edibles</a></li>
+    <li><a href="#!">Clones</a></li>
+    <li><a href="#!">Service Area</a></li>
   </ul>
 </div>
 <script type="text/javascript">
