--- a/client_side/index.html
+++ b/client_side/index.html
@@ -19,5 +19,9 @@
 </head>
 <body>
 
+  <a href="#" class="button-collapse" data-activates="nav-mobile" data-sidenav="left" data-menuwidth="500" data-closeonclick="false">
+    Show side-nav
+  </a>
+
 </body>
 </html>
