--- a/client_side/index.html
+++ b/client_side/index.html
@@ -20,6 +20,8 @@
   <script src="js/angular-materialize.js"></script>
 </head>
 <body class="container orange lighten-5">
+  <!-- End of Scripts -->
+
   <!-- top nav bar -->
   <div class="row">
     <nav>
@@ -33,6 +35,10 @@
       </div>
     </nav>
   </div>
+  <!-- End of top nav bar -->
+
+
+
   <!-- Page Layout here -->
   <div class="row orange lighten-5 z-depth-5">
     <div class="container">
@@ -59,12 +65,11 @@
         </div>
         <div class="row">
 
-<<<<<<< HEAD
+
   <a href="#" class="button-collapse" data-activates="nav-mobile" data-sidenav="left" data-menuwidth="500" data-closeonclick="false">
     Show side-nav
   </a>
 
-=======
         <div class="file-field input-field col s6">
           <div class="btn-floating lime darken-4 left">
             <i class="fa fa-file-image-o"></i>
@@ -87,6 +92,27 @@
     </form>
   </div>
 </div>
+<!-- End of Page Layout -->
+
+<!-- Patient Login Form -->
+<div class="row orange lighten-5 z-depth-5">
+  <div class="container">
+    <form class="">
+      <div class="row">
+        <div class="input-field col s6">
+          <input id="email" type="email" class="validate">
+          <label for="email">Email</label>
+        </div>
+        <div class="input-field col s6">
+          <input id="password" type="password" class="validate">
+          <label for="password">Password</label>
+        </div>
+      </div>
+    </div>
+  </div>
+<!-- End Patient Login Form -->
+
+
 <!-- Pop Out Side Menu -->
 <div class="row">
   <ul id="slide-out" class="side-nav">
@@ -97,6 +123,10 @@
     <li><a href="#!">Service Area</a></li>
   </ul>
 </div>
+<!-- End of Pop Out Side Menu  -->
+
+
+
 <script type="text/javascript">
 $(document).ready(function(){
 
@@ -110,6 +140,5 @@ $(document).ready(function(){
 
 })
 </script>
->>>>>>> fb6eb2d354ab389bce7354d572760af9cd847ab8
 </body>
 </html>
