setting up files

--- a/client_side/index.html
+++ b/client_side/index.html
@@ -20,6 +20,7 @@
   <script src="js/angular-materialize.js"></script>
 </head>
 <body class="container orange lighten-5">
+  
   <!-- top nav bar -->
   <div class="row">
     <nav>
@@ -33,6 +34,8 @@
       </div>
     </nav>
   </div>
+  <!-- End of nav bar -->
+
   <!-- Page Layout here -->
   <div class="row orange lighten-5 z-depth-5">
     <div class="container">
