--- a/client_side/index.html
+++ b/client_side/index.html
@@ -66,10 +66,6 @@
         <div class="row">
 
 
-  <a href="#" class="button-collapse" data-activates="nav-mobile" data-sidenav="left" data-menuwidth="500" data-closeonclick="false">
-    Show side-nav
-  </a>
-
         <div class="file-field input-field col s6">
           <div class="btn-floating lime darken-4 left">
             <i class="fa fa-file-image-o"></i>
@@ -100,12 +96,12 @@
     <form class="">
       <div class="row">
         <div class="input-field col s6">
-          <input id="email" type="email" class="validate">
-          <label for="email">Email</label>
+          <input id="email_login" type="email" class="validate">
+          <label for="email_login">Email</label>
         </div>
         <div class="input-field col s6">
-          <input id="password" type="password" class="validate">
-          <label for="password">Password</label>
+          <input id="password_login" type="password" class="validate">
+          <label for="password_login">Password</label>
         </div>
       </div>
     </div>
@@ -142,3 +138,10 @@ $(document).ready(function(){
 </script>
 </body>
 </html>
+
+
+
+
+<!-- n k<a href="#" class="button-collapse" data-activates="nav-mobile" data-sidenav="left" data-menuwidth="500" data-closeonclick="false">
+Show side-nav
+</a> -->
