--- a/client_side/index.html
+++ b/client_side/index.html
@@ -73,9 +73,7 @@
             <label for="password">Password</label>
           </div>
         </div>
-
-
-
+        <!-- upload images -->
         <div class="row">
           <div class="file-field input-field col s6">
             <div class="btn-floating lime darken-4 left">
