fixing routes and initializing menu page/sidenav

--- a/client_side/index.html
+++ b/client_side/index.html
@@ -39,8 +39,8 @@
         <ul class="right hide-on-med-and-down">
           <li class="links"><span class="left">Menu</span><a data-activates="slide-out" class="button-collapse show-on-large element-animation" id="car" ><i class="fa fa-taxi "></i></a></li>
           <li class="links"><a href="#/signup" class="waves-effect waves-light ">Join</a></li>
-          <li class="links"><a class="waves-effect waves-light ">Patient Login</a></li>
-          <li class="links"><a class="waves-effect waves-light " id="cart"><i class="fa fa-cart-plus "></i></a></li>
+          <li class="links"><a href="#/login" class="waves-effect waves-light ">Patient Login</a></li>
+          <li class="links"><a href="#/cart" class="waves-effect waves-light " id="cart"><i class="fa fa-cart-plus "></i></a></li>
         </ul>
       </div>
     </nav>
@@ -53,10 +53,10 @@
 <div class="row orange lighten-5 z-depth-5">
   <div class="container">
     <ul id="slide-out" class="side-nav">
-      <li><a href="#!">Menu</a></li>
-      <li><a href="#!">Service Area</a></li>
-      <li><a href="#!">Order History</a></li>
-      <li><a href="#!">Contact Us</a></li>
+      <li><a href="#/menu">Menu</a></li>
+      <li><a href="#/locations">Service Area</a></li>
+      <li><a href="#/orders">Order History</a></li>
+      <li><a href="#/contact">Contact Us</a></li>
     </ul>
   </div>
 </div>
@@ -79,14 +79,18 @@ $(document).ready(function(){
               <div class="row lime darken-4">
                 <div class="col s6 offset-s6">
                   <h5 class="white-text">Hours & Info</h5>
-                  <p class="grey-text text-lighten-4">Serving Venice, Santa Monica, Marina Del Rey<br>Sun-Thurs: 2pm-Midnight, Fri-Sat: 2pm-1am<br>310.625.4424<br>gethigh@kushtaxi.com
+                  <p class="grey-text text-lighten-4">
+                    Serving Venice, Santa Monica, Marina Del Rey<br>
+                    Sun-Thurs: 2pm-Midnight, Fri-Sat: 2pm-1am<br>
+                    310.625.4424<br>
+                    gethigh@kushtaxi.com
                   </p>
                 </div>
               </div>
             <div class="footer-copyright lime darken-4">
               <div class="container">
               © 2016 E.T. Productions
-              <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+              <a class="grey-text text-lighten-4 right" href="#/contact">Contact Us</a>
               </div>
             </div>
           </div>
