--- a/client_side/index.html
+++ b/client_side/index.html
@@ -37,7 +37,7 @@
       <div class="nav-wrapper lime darken-4">
         <a class="brand-logo animated fadeInRight center-align">Kush Taxi</a>
         <ul class="right hide-on-med-and-down">
-          <li class="links"><span class="left">Menu</span><a data-activates="slide-out" class="button-collapse show-on-large element-animation" id="car" ><i class="fa fa-taxi "></i></a></li>
+          <li class="links"><span class="left">Menu</span><a data-activates="slide-out" class="button-collapse show-on-large element-animation" id="car"><i class="fa fa-taxi "></i></a></li>
           <li class="links"><a href="#/signup" class="waves-effect waves-light ">Join</a></li>
           <li class="links"><a href="#/login" class="waves-effect waves-light ">Patient Login</a></li>
           <li class="links"><a href="#/cart" class="waves-effect waves-light " id="cart"><i class="fa fa-cart-plus "></i></a></li>
@@ -53,7 +53,7 @@
 <div class="row orange lighten-5 z-depth-5">
   <div class="container">
     <ul id="slide-out" class="side-nav">
-      <li><a href="#/menu">Menu</a></li>
+      <li><a href="#/products">Products</a></li>
       <li><a href="#/locations">Service Area</a></li>
       <li><a href="#/orders">Order History</a></li>
       <li><a href="#/contact">Contact Us</a></li>
