--- a/client_side/index.html
+++ b/client_side/index.html
@@ -46,12 +46,12 @@
     </nav>
   </div>
   <!-- End of top nav bar -->
-  
+
 
 
 <!-- Pop Out Side Menu -->
 <div class="row orange lighten-5 z-depth-5">
-  <div class="container">
+  <div class="container brown-text text darken-2">
     <ul id="slide-out" class="side-nav">
       <li><a href="#/products">Products</a></li>
       <li><a href="#/locations">Service Area</a></li>
@@ -74,9 +74,9 @@ $(document).ready(function(){
 
 <!-- Footer  -->
   <div class="row">
-    <footer class="page-footer orange lighten-5 z-depth-5">
+    <footer class="page-footer lime darken-4 z-depth-5">
             <div class="container">
-              <div class="row lime darken-4">
+              <div class="row ">
                 <div class="col s6 offset-s6">
                   <h5 class="white-text">Hours & Info</h5>
                   <p class="grey-text text-lighten-4">
